--- a/EcomApp/package.json
+++ b/EcomApp/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.7", 
+    "@tailwindcss/forms": "^0.5.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -37,6 +37,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.31",
+    "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.1.3"
   }
